--- a/package.json
+++ b/package.json
@@ -2,14 +2,6 @@
     "name": "webdriverio-tests",
     "version": "0.1.0",
     "private": true,
-    "devDependencies": {
-        "@wdio/cli": "^7.21.0",
-        "@wdio/local-runner": "^7.21.0",
-        "@wdio/mocha-framework": "^7.21.0",
-        "@wdio/spec-reporter": "^7.21.0",
-        "wdio-chromedriver-service": "^7.3.2",
-        "wdio-wait-for": "^2.2.6"
-    },
     "scripts": {
         "sitemap": "node sitemap.js",
         "generate": "rm -r -f screenshots/ && IS_GENERATE=1 wdio run wdio.conf.js && IS_GENERATE=1  IS_MOBILE=1 wdio run wdio.conf.js",
@@ -17,10 +9,16 @@
         "wdio:mobile": "IS_MOBILE=1 wdio run wdio.conf.js"
     },
     "dependencies": {
-        "advanced-sitemap-generator": "^1.8.8",
-        "chromedriver": "^108.0.0",
-        "dotenv": "^16.0.3",
+        "@wdio/cli": "^8.39.0",
+        "@wdio/local-runner": "^8.39.0",
+        "@wdio/mocha-framework": "^8.39.0",
+        "@wdio/spec-reporter": "^8.39.0",
+        "chromedriver": "^126.0.3",
+        "dotenv": "^16.4.5",
         "fs": "^0.0.1-security",
-        "wdio-image-comparison-service": "^4.0.0"
+        "sitemap-generator": "^8.5.1",
+        "wdio-chromedriver-service": "^8.1.1",
+        "wdio-image-comparison-service": "^5.0.3",
+        "wdio-wait-for": "^3.0.11"
     }
 }
