--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
-    "name": "webdriverio-tests",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "sitemap": "node sitemap.js",
-        "generate": "rm -r -f screenshots/ && IS_GENERATE=1 wdio run wdio.conf.js && IS_GENERATE=1  IS_MOBILE=1 wdio run wdio.conf.js",
-        "wdio": "wdio run wdio.conf.js",
-        "wdio:mobile": "IS_MOBILE=1 wdio run wdio.conf.js"
-    },
-    "dependencies": {
-        "@wdio/cli": "^8.39.0",
-        "@wdio/local-runner": "^8.39.0",
-        "@wdio/mocha-framework": "^8.39.0",
-        "@wdio/spec-reporter": "^8.39.0",
-        "chromedriver": "^126.0.3",
-        "dotenv": "^16.4.5",
-        "fs": "^0.0.1-security",
-        "sitemap-generator": "^8.5.1",
-        "wdio-chromedriver-service": "^8.1.1",
-        "wdio-image-comparison-service": "^5.0.3",
-        "wdio-wait-for": "^3.0.11"
-    }
+  "name": "playwright",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test:generate": "npx playwright test --update-snapshots",
+    "test": "npx playwright test",
+    "example:test:generate": "npx playwright test example.spec.js --update-snapshots",
+    "example:test": "npx playwright test example.spec.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@playwright/test": "^1.46.1",
+    "@types/node": "^22.5.0",
+    "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security"
+  }
 }
